# job_finder

./: README.md  pyproject.toml
job_finder/: main.py
job_finder/data_processing/: get_local.py  get_vacancies.py
job_finder/data_processing/etc/: carcass.py
job_finder/data_processing/save_data/: 13-05-2024 13:58:25 Python .json  14-05-2024 15:42:39 Тестировщик .json
job_finder/interface/: interface.py
job_finder/job_processing/: vacanccies.py  vacancy.py
job_finder/job_processing/converter/: converter.py
job_finder/job_processing/converter/currency_data/: 14-05-2024 currency .json
