[tool.poetry]
name = "job-finder"
version = "0.1.0"
description = ""
authors = ["alextk37 <alextk37@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
